[package]
name = "os"
version = "0.1.0"
authors = ["vtta <vtta0124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "0.5.4", features = ["inline-asm"] }
spin = "0.5.2"
bit_field = "0.10.0"
buddy_system_allocator = "0.3.6"
